--- a/src/app/modules/usecases/components/feed/feed.component.html
+++ b/src/app/modules/usecases/components/feed/feed.component.html
@@ -25,7 +25,7 @@
                         <div class="_aak6 _aak9" #asSummary>
                             <app-linkprofile (usernameEvent)="this.gotToProfile($event)" ></app-linkprofile>
                             <app-suggestions (usernameEvent)="this.gotToProfile($event)"></app-suggestions>
-                            <app-privacy></app-privacy>
+                            <!-- <app-privacy></app-privacy> -->
                         </div>
                     <!-- === Summary End  ==== -->
 
