--- a/src/app/modules/usecases/components/profile/promain/promain.component.html
+++ b/src/app/modules/usecases/components/profile/promain/promain.component.html
@@ -6,7 +6,7 @@
 				<!-- 1. header start -->
 				<header class="x1qjc9v5 x78zum5 x1q0g3np x2lah0s x1n2onr6 xc2v4qs x1qsaojo x1xl8k2i x1kcpa7z x1ez9qw7">
 					<div class="x2lah0s x78zum5 xdt5ytf xl56j7k x1n2onr6 x16fuon9 x5bv2cf x9ozhqo xbn8dsz x184cenk">
-						<app-profileheader></app-profileheader>
+						<app-profileheader *ngIf="this.user" [user]="this.user"></app-profileheader>
 					</div>
 					<section class="x1qjc9v5 x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x5n08af x78zum5 xdt5ytf xs83m0k xeuugli xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1n2onr6 xk390pu x11njtxf x139hhg0 x1qgnrqa xg1prrt x1quol0o">
 						<app-profileinfo></app-profileinfo>
