--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -937,7 +937,7 @@
                                                                                     </a>
                                                                                 </div>
                                                                             </div>
-                                                                            <div id="008" [routerLinkActive]="['active']" [routerLink]="['lujandev']" >
+                                                                            <div id="008" [routerLinkActive]="['active']" [routerLink]="[this.user.username]" >
                                                                                 <div class="x1n2onr6">
                                                                                     <div class="x1n2onr6">
                                                                                         <a
