--- a/src/app/modules/usecases/components/profile/promain/promain.component.html
+++ b/src/app/modules/usecases/components/profile/promain/promain.component.html
@@ -9,7 +9,7 @@
 						<app-profileheader *ngIf="this.user" [user]="this.user"></app-profileheader>
 					</div>
 					<section class="x1qjc9v5 x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x5n08af x78zum5 xdt5ytf xs83m0k xeuugli xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x1n2onr6 xk390pu x11njtxf x139hhg0 x1qgnrqa xg1prrt x1quol0o">
-						<app-profileinfo></app-profileinfo>
+						<app-profileinfo *ngIf="this.user" [user]="this.user" [btnEdit]="this.btnEdit"></app-profileinfo>
 					</section>
 				</header>
 				<!-- / header end -->
@@ -22,7 +22,7 @@
 
 				<!-- 3. Tabs start -->
 				<div>
-					<app-profiletabs *ngIf="this.currentRoute" [currentRoute]="this.currentRoute" ></app-profiletabs>
+					<app-profiletabs *ngIf="this.paramUsername" [currentRoute]="this.paramUsername" ></app-profiletabs>
 				</div>
 				<!-- / tabs end -->
 
