--- a/src/app/shared/components/main/profile/profileinfo/profileinfo.component.html
+++ b/src/app/shared/components/main/profile/profileinfo/profileinfo.component.html
@@ -1,11 +1,15 @@
 <!-- Username -->
 <div class="x6s0dn4 x78zum5 x1q0g3np xs83m0k xeuugli x1n2onr6">
-    <h2 class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye x1ms8i2q xo1l8bm x5n08af x10wh9bi x1wdrske x8viiok x18hxmgj" tabindex="-1" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:25px;">lujandev</h2>
+    <h2 class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye x1ms8i2q xo1l8bm x5n08af x10wh9bi x1wdrske x8viiok x18hxmgj" tabindex="-1" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:25px;">
+        {{ this.user.username }}
+    </h2>
 
     <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh xmn8rco x1n2onr6 x1plvlek xryxfnj xs83m0k x1c4vz4f x1q0g3np xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
         <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1iyjqo2 x2lwn1j xeuugli x1q0g3np xqjyukv x6s0dn4 x1oa3qoh x1nhvcw1">
             <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1iyjqo2 x2lwn1j xeuugli xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
-                <a [routerLink]="['/accounts/edit/']"  class="x1i10hfl xjqpnuy xa49m3k xqeqjp1 x2hbi6w x972fbf xcfux6l x1qhh985 xm0m39n xdl72j9 x2lah0s xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x2lwn1j xeuugli xexx8yu x18d9i69 x1hl2dhg xggy1nq x1ja2u2z x1t137rt x1q0g3np x1lku1pv x1a2a7pz x6s0dn4 xjyslct x1lq5wgf xgqcy7u x30kzoy x9jhf4c x1ejq31n xd10rxx x1sy0etr x17r0tee x9f619 x1ypdohk x78zum5 x1i0vuye xwhw2v2 x10w6t97 xl56j7k x17ydfre x1f6kntn x1swvt13 x1pi30zi x2b8uid xlyipyv x87ps6o x14atkfc x1n2onr6 x1d5wrs8 x1gjpkn9 x175jnsf xsz8vos x17a9jwe" href="/accounts/edit/" role="link" tabindex="0">Editar perfil</a>
+                <a [routerLink]="['/accounts/edit/']"  class="x1i10hfl xjqpnuy xa49m3k xqeqjp1 x2hbi6w x972fbf xcfux6l x1qhh985 xm0m39n xdl72j9 x2lah0s xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x2lwn1j xeuugli xexx8yu x18d9i69 x1hl2dhg xggy1nq x1ja2u2z x1t137rt x1q0g3np x1lku1pv x1a2a7pz x6s0dn4 xjyslct x1lq5wgf xgqcy7u x30kzoy x9jhf4c x1ejq31n xd10rxx x1sy0etr x17r0tee x9f619 x1ypdohk x78zum5 x1i0vuye xwhw2v2 x10w6t97 xl56j7k x17ydfre x1f6kntn x1swvt13 x1pi30zi x2b8uid xlyipyv x87ps6o x14atkfc x1n2onr6 x1d5wrs8 x1gjpkn9 x175jnsf xsz8vos x17a9jwe" href="/accounts/edit/" role="link" tabindex="0">
+                    {{ this.btnEdit }}
+                </a>
             </div>
         </div>
     </div>
@@ -26,7 +30,7 @@
 <!-- Tags -->
 <ul class="x78zum5 x1q0g3np xieb3on">
     <li class="xl565be x1m39q7l x1uw6ca5 x2pgyrj">
-        <span class="_ac2a"><span>12</span></span> publicaciones
+        <span class="_ac2a"><span>{{ this.user.stats!.posts }}</span></span> posts
     </li>
     <li class="xl565be x1m39q7l x1uw6ca5 x2pgyrj">
         <!-- href="/lujandev/followers/"  -->
@@ -36,7 +40,7 @@
             class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _alvs _a6hd" 
             role="link" 
             tabindex="0">
-            <span class="_ac2a" title="104"><span>104</span></span> seguidores
+            <span class="_ac2a" title="104"><span> {{ this.user.stats!.followers }} </span></span> followers
         </a>
     </li>
     <li class="xl565be x1m39q7l x1uw6ca5 x2pgyrj">
@@ -45,7 +49,7 @@
             class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _alvs _a6hd" 
             role="link" 
             tabindex="0">
-            <span class="_ac2a"><span>500</span></span> seguidos
+            <span class="_ac2a"><span>{{ this.user.stats!.followings }}</span></span> followings
         </a>
     </li>
 </ul>
