--- a/src/app/shared/components/main/profile/profileinfo/profileinfo.component.html
+++ b/src/app/shared/components/main/profile/profileinfo/profileinfo.component.html
@@ -30,7 +30,7 @@
 <!-- Tags -->
 <ul class="x78zum5 x1q0g3np xieb3on">
     <li class="xl565be x1m39q7l x1uw6ca5 x2pgyrj">
-        <span class="_ac2a"><span>{{ this.user.stats!.posts }}</span></span> posts
+        <span class="_ac2a" *ngIf="this.user" ><span>{{ this.user.stats?.posts }}</span></span> posts
     </li>
     <li class="xl565be x1m39q7l x1uw6ca5 x2pgyrj">
         <!-- href="/lujandev/followers/"  -->
@@ -40,7 +40,7 @@
             class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _alvs _a6hd" 
             role="link" 
             tabindex="0">
-            <span class="_ac2a" title="104"><span> {{ this.user.stats!.followers }} </span></span> followers
+            <span class="_ac2a" title="104" *ngIf="this.user"><span> {{ this.user.stats?.followers }} </span></span> followers
         </a>
     </li>
     <li class="xl565be x1m39q7l x1uw6ca5 x2pgyrj">
@@ -49,7 +49,7 @@
             class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _alvs _a6hd" 
             role="link" 
             tabindex="0">
-            <span class="_ac2a"><span>{{ this.user.stats!.followings }}</span></span> followings
+            <span class="_ac2a" *ngIf="this.user"><span>{{ this.user.stats?.followings }}</span></span> followings
         </a>
     </li>
 </ul>
