--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -957,7 +957,7 @@
                                                                                                                 class="xnz67gz x14yjl9h xudhj91 x18nykt9 xww2gxu x9f619 x1lliihq x2lah0s x6ikm8r x10wlt62 x1n2onr6 x1ykvv32 xougopr x159fomc xnp5s1o x194ut8o x1vzenxt xd7ygy7 xt298gk x1xrz1ek x1s928wv x162n7g1 x2q1x1w x1j6awrg x1n449xj x1m1drc7"
                                                                                                             >
                                                                                                                 <img
-                                                                                                                    src="https://lujandev.com/wp-content/uploads/2023/03/ld-02-1280x1707.png"
+                                                                                                                    src="{{ this.user.profileImageURL }}"
                                                                                                                     alt=""
                                                                                                                     class="x6umtig x1b1mbwd xaqea5y xav7gou xk390pu x5yr21d xpdipgo xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x11njtxf xh8yej3"
                                                                                                                 />
