--- a/src/app/shared/components/main/summary/linkprofile/linkprofile.component.html
+++ b/src/app/shared/components/main/summary/linkprofile/linkprofile.component.html
@@ -20,7 +20,7 @@
                                         class="x1i10hfl x1qjc9v5 xjbqb8w xjqpnuy xa49m3k xqeqjp1 x2hbi6w x13fuv20 xu3j5b3 x1q0q8m5 x26u7qi x972fbf xcfux6l x1qhh985 xm0m39n x9f619 x1ypdohk x78zum5 xdl72j9 xdt5ytf x2lah0s xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x2lwn1j xeuugli xexx8yu x4uap5 x18d9i69 xkhd6sd x1n2onr6 x16tdsg8 x1hl2dhg xggy1nq x1ja2u2z x1t137rt xnz67gz x14yjl9h xudhj91 x18nykt9 xww2gxu x9f619 x1lliihq x2lah0s x6ikm8r x10wlt62 x1n2onr6 x1ykvv32 xougopr x159fomc xnp5s1o x194ut8o x1vzenxt xd7ygy7 xt298gk x1xrz1ek x1s928wv x162n7g1 x2q1x1w x1j6awrg x1n449xj x1m1drc7 x1ypdohk x4gyw5p _a6hd"
                                     >
                                         <img
-                                            src="https://images.unsplash.com/photo-1681622341251-4fbbff1c27c2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
+                                            src="{{ this.user.profileImageURL }}"
                                             alt=""
                                             class="x6umtig x1b1mbwd xaqea5y xav7gou xk390pu x5yr21d xpdipgo xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x11njtxf xh8yej3"
                                         />
@@ -42,11 +42,11 @@
                                                 class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x16n37ib x1uhb9sk x1plvlek xryxfnj x1iyjqo2 x2lwn1j xeuugli x1q0g3np xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1"
                                             >
                                                 <a
-                                                    (click)="this.gotoProfile('lujandev')"
+                                                    (click)="this.gotoProfile( this.user.username! )"
                                                     class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _aak1 _a6hd"
                                                     role="link"
                                                 >
-                                                    lujandev
+                                                    {{ this.user.username }}
                                                 </a>
                                             </div>
                                         </span>
@@ -62,7 +62,7 @@
                                                     style="line-height: 18px;"
                                                     class="x193iq5w xeuugli x13faqbe x1vvkbs xt0psk2 x1i0vuye xvs91rp xo1l8bm x1roi4f4 x10wh9bi x1wdrske x8viiok x18hxmgj"
                                                 >
-                                                    Eddy Lujan
+                                                {{ this.user.fullname }}
                                                 </span>
                                             </div>
                                         </span>
